--- a/visualizeDataProject/frontend/package.json
+++ b/visualizeDataProject/frontend/package.json
@@ -29,8 +29,11 @@
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@swimlane/ngx-charts": "^23.1.0",
+    "angular-plotly.js": "^20.0.0",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "plotly.js": "^3.2.0",
+    "plotly.js-dist-min": "^3.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -40,6 +43,7 @@
     "@angular/cli": "^20.3.9",
     "@angular/compiler-cli": "^20.3.0",
     "@types/jasmine": "~5.1.0",
+    "@types/plotly.js-dist-min": "^2.3.4",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
