added environments to frontend; created home page and load spinner; created run scripts in package.json

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /venv/
 /.idea/
+/node_modules/
 /visualizeDataProject/frontend/.angular/
 /visualizeDataProject/frontend/.vscode/
 /visualizeDataProject/frontend/node_modules/
