--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,9 @@
     "plotly.js-dist-min": "^3.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "vega": "^6.2.0",
+    "vega-embed": "^7.1.0",
+    "vega-lite": "^6.4.1",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
